# sensord

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_AirDensity.c
